# demo-python-exe

./: README.md  main.py  pyproject.toml  requirements.txt
