[tool.poetry]
name = "demo-python-exe"
version = "0.1.0"
description = ""
authors = ["natthasath <natthasath.sak@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "demo_python_exe"}]

[tool.poetry.dependencies]
python = "^3.10"
pyqrcode = "^1.2.1"
pypng = "^0.20220715.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
